# multidrone_summer_school_2019

./: LICENSE  README.md
drcsim_gazebo_plugins/: CMakeLists.txt  package.xml
drcsim_gazebo_plugins/include/drcsim_gazebo_plugins/: DRCVehiclePlugin.hh
drcsim_gazebo_plugins/src/: DRCVehiclePlugin.cc
drcsim_gazebo_ros_plugins/: CMakeLists.txt  package.xml
drcsim_gazebo_ros_plugins/include/drcsim_gazebo_ros_plugins/: DRCVehicleROSPlugin.h
drcsim_gazebo_ros_plugins/src/: DRCVehicleROSPlugin.cpp
drcsim_model_resources/: CMakeLists.txt
drcsim_model_resources/gazebo_models/: database.config
drcsim_model_resources/gazebo_models/drc_vehicle_xp900/: model.sdf
summer_school_exercises/: CMakeLists.txt  package.xml
summer_school_exercises/launch/: follow_vehicle.launch  gimbal_control.launch  simulation.launch  test_follow_vehicle_ual_server.launch
summer_school_exercises/scripts/: follow_vehicle.py  gimbal_control.py
summer_school_exercises/src/: demo_follow_vehicle.cpp  demo_follow_vehicle_ual_server.cpp  drc_vehicle_moving.cpp
summer_school_exercises/worlds/: outdoor.world
